# software-challenge

./: .dockerignore  .gitignore  Dockerfile  README.MD  README.md  SERVER_LONGRUN_GA_GUIDE.md  TUNING.md  benchmark.py  cheatsheet.md  client.py  client_cython.py  client_optimized.py  client_v2.py  custom_bot_paths.json  docker-compose.yml  duel_state.json  final_analysis.md  fragen.md  ga_optimize_v2.py  game_debug_20260219_182624.txt  game_debug_20260219_205854.txt  piranhas-bot  piranhas-ki-erklaerung.html  run_unattended_ga.py  single_game.py  tournament.py  tournament_new_vs_old.py
Tournier/: tournament_results.json
bots/: starter.py
bots/rust_v2/: Cargo.toml  run.py  start.sh
bots/rust_v2/benches/: benchmark.rs
bots/rust_v2/src/: bitboard.rs  board.rs  evaluate.rs  main.rs  search.rs
bots/rust_v2/tasks/: todo.md
bots/rust_v3/: Cargo.toml  build.rs  pur_rust_client.py  run_hce.py  run_nnue.py
bots/rust_v3/benches/: benchmark.rs
bots/rust_v3/src/: bitboard.rs  board.rs  evaluate.rs  lib.rs  main.rs  nnue.rs  search.rs
bots/rust_v3/tasks/: todo.md
cython/: client_cython.py
cython_core/: evaluate.pyx  search.pyx
cython_v1/: setup.py
cython_v2/: requirements.txt
cython_v3/: README.md  prepare_submission.sh  requirements.txt  setup.py  start.sh
ga_longrun/: opponents.txt  progress_live.json  progress_live.txt
nnue/: README.md  datagen  model.pt  rebuild.sh  run_datagen.sh
results/: tournament_results.json
rust_bot/: Cargo.toml  pur_rust_client.py
scripts/: ga_optimize_v2.py  package_bots.py  package_v2_hpc_runtime_zip.sh  parse_logs.py  (+6 more)
(+286 files in other folders)
